--- a/assets/scss/modules/admin/_toolbar.scss
+++ b/assets/scss/modules/admin/_toolbar.scss
@@ -8,9 +8,9 @@
     width: 100%;
     display: flex;
     padding: 0;
-    @include media-breakpoint-up(lg) {
-      padding-right: 1rem;
-    }
+    // @include media-breakpoint-up(lg) {
+    //   padding-right: 1rem;
+    // }
 
     &.is-dark {
       color: var(--admin-toolbar-text-light);
@@ -94,7 +94,10 @@
     .dropdown-toggle {
       color: var(--foreground);
       height: 100%;
-      padding: 0.625rem 1rem;
+      padding: 0.625rem;
+      @include media-breakpoint-up(sm) {
+        padding: 0.625rem 1rem;
+      }
       &:hover, &:active, &:focus {
         @include darken(--admin-sidebar, 0.02);
       }
@@ -108,74 +111,39 @@
         margin-right: 0.25rem;
       }
       .dropdown-toggle {
-        padding: 0 1rem;
+        padding: 0 0.8125rem;
+        width: 45px;
+        overflow: hidden;
+        @include media-breakpoint-up(sm) {
+          width: auto;
+          overflow: auto;
+          padding: 0 1rem;
+        }
         &:after {
           vertical-align: middle;
         }
       }
+
     }
 
     &__profile {
       margin-left: auto;
+      padding-right: 1rem;
     }
 
-    &__site a {
-      height: 100%;
-      padding: 0.625rem 1rem;
+    &__site {
+      display: none;
+      @include media-breakpoint-up(sm) {
+        display: block;
+      }
+      a {
+        height: 100%;
+        padding: 0.625rem 1rem;
+      }
       i, .fas {
         margin-right: 0.25rem;
       }
     }
-
-    // &:hover {
-    //   opacity: 1;
-
-    //   @include darken(--admin-toolbar, 0.2);
-
-    //   > .toolbar-menu {
-    //     visibility: visible;
-    //     height: auto;
-    //   }
-    // }
   }
 
-  // .toolbar-menu {
-  //   background: var(--admin-sidebar-menu);
-  //   border-radius: 0 $border-radius $border-radius 0;
-  //   box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
-  //   border: 1px solid rgba(0, 0, 0, 0.1);
-  //   color: var(--shade);
-
-  //   font-weight: $font-weight-normal;
-  //   font-size: 100%;
-  //   visibility: hidden;
-  //   height: 0;
-  //   list-style: none;
-  //   position: absolute;
-  //   left: 0;
-  //   top: 100%;
-  //   width: $admin-sidebar-width;
-  //   margin: 0;
-  //   padding: 0;
-
-  //   li {
-  //     a {
-  //       padding: $spacer / 2;
-  //       display: block;
-  //       color: var(--shade);
-
-  //       &:hover {
-  //         @include darken(--admin-sidebar, 0.02);
-  //         color: var(--admin-sidebar-icon);
-  //         text-decoration: none;
-  //       }
-  //     }
-  //   }
-  // }
-  // .toolbar-item__profile {
-  //   .toolbar-menu {
-  //     left: auto;
-  //     right: 0;
-  //   }
-  // }
 }
