--- a/templates/content/listing.html.twig
+++ b/templates/content/listing.html.twig
@@ -28,12 +28,34 @@
       singular="{{ contentType.singular_name }}"
     ></listing-select-box>
 
+    {% set filterOptions = {'id': "Id", 'Author': 'Author', 'status': 'Status', 'createdAt': 'Created date', 'modifiedAt': 'Modified date', 'publishedAt': 'Published date', 'depublishedAt': 'Depublished date'} %}
+    {% set sortBy = app.request.get('sort')|default() %}
+
     <div class="card">
         <div class="card-header">
             {{ 'title.contentlisting'|trans }}
         </div>
         <div class="card-body">
-            (filtering options go here)
+            <form>
+                <div class="form-group">
+                    <p>
+                        <strong>Sort by</strong>:
+                        <select name="sort" class="form-control">
+                                <option value="" disabled {% if sortBy is empty %}selected{% endif %}>
+                                    Select item
+                                </option>
+                            {% for key, filterOption in filterOptions %}
+                                <option value="{{ key }}" {% if sortBy == key %}selected{% endif %}>
+                                    {{ filterOption }}
+                                </option>
+                            {% endfor %}
+                        </select>
+                    </p>
+                </div>
+                <div class="form-group">
+                    <button type="submit">Filter</button>
+                </div>
+            </form>
         </div>
     </div>
 
