WIP localizing templates

--- a/templates/_base/layout.html.twig
+++ b/templates/_base/layout.html.twig
@@ -35,7 +35,8 @@
             'action.create_new': 'action.create_new'|trans,
             'general.greeting': 'general.greeting'|trans({'%name%': user_display_name}),
             'action.logout': 'action.logout'|trans,
-            'action.edit_profile': 'action.edit_profile'|trans
+            'action.edit_profile': 'action.edit_profile'|trans,
+            'about.visit_bolt': 'about.visit_bolt'|trans
         }|json_encode %}
 
         <admin-toolbar
