--- a/templates/_partials/fields/image.html.twig
+++ b/templates/_partials/fields/image.html.twig
@@ -3,6 +3,10 @@
 {% block field %}
     {% set setPath = field.definition.get('upload')|default('') %}
     {% set directory = path('bolt_async_upload', {'location': location|default('files'), 'path': setPath}) %}
+    {% set labels = {
+        'button_upload': 'image.button_upload'|trans,
+        'button_from_library': 'image.button_from_library'|trans,
+    }|json_encode %}
     <editor-image
         :name='{{ name|json_encode }}'
         :filename='{{ field.get('filename')|json_encode }}'
@@ -12,6 +16,7 @@
         :media='{{ field.get('media')|json_encode }}'
         :directory='{{ directory|json_encode }}'
         :csrf_token='{{ csrf_token('upload')|json_encode }}'
+        :labels='{{ labels }}'
     ></editor-image>
 
 {% endblock %}
