--- a/templates/_partials/fields/slug.html.twig
+++ b/templates/_partials/fields/slug.html.twig
@@ -7,5 +7,10 @@
         :prefix='{{ field.slugPrefix|json_encode }}'
         :field-class='{{ class|json_encode }}'
         :generate='{{ field.slugUseFields|join(', ')|json_encode }}'
+        :labels='{{ {
+            'button_locked': 'slug.button_locked'|trans,
+            'button_edit': 'slug.button_edit'|trans,
+            'generate_from': 'slug.generate_from'|trans,
+        }|json_encode }}'
     ></editor-slug>
 {% endblock %}
