Listing components translations

--- a/templates/_partials/_content_listing.html.twig
+++ b/templates/_partials/_content_listing.html.twig
@@ -3,7 +3,6 @@
     <listing-records
       type="{{ type }}"
       :data="{{ records|json_records }}"
-      :labels="{{ { 'actions__view_on_site': 'content_listing.actions.view_on_site'|trans }|json_encode }}"
     >
     </listing-records>
     <!-- end listing records -->
@@ -12,7 +11,24 @@
     <listing-filter></listing-filter>
     <!-- end listing filter -->
 
-    <listing-table ></listing-table>
+    <listing-table
+    :labels="{{
+    { 'actions':
+        {
+            'view_on_site': 'listing_table.actions.view_on_site'|trans,
+            'status_to_publish': 'listing_table.actions.status_to_publish'|trans,
+            'status_to_held': 'listing_table.actions.status_to_held'|trans,
+            'status_to_draft': 'listing_table.actions.status_to_draft'|trans,
+            'status_to_publish': 'listing_table.actions.status_to_publish'|trans,
+            'duplicate': 'listing_table.actions.duplicate'|trans,
+            'delete': 'listing_table.actions.delete'|trans,
+            'slug': 'listing_table.actions.slug'|trans,
+            'created_on': 'listing_table.actions.created_on'|trans,
+            'published_on': 'listing_table.actions.published_on'|trans,
+            'last_modified_on': 'listing_table.actions.last_modified_on'|trans,
+        }
+    }|json_encode }}"
+    ></listing-table>
 
     <nav class="listing__filter">
       {% include '@bolt/_partials/_pager.html.twig' with { 'records': records } %}
