--- a/templates/_partials/fields/image.html.twig
+++ b/templates/_partials/fields/image.html.twig
@@ -6,6 +6,9 @@
     {% set labels = {
         'button_upload': 'image.button_upload'|trans,
         'button_from_library': 'image.button_from_library'|trans,
+        'placeholder_filename': 'image.placeholder_filename'|trans,
+        'placeholder_alt_text': 'image.placeholder_alt_text'|trans,
+        'placeholder_title': 'image.placeholder_title'|trans,
     }|json_encode %}
     <editor-image
         :name='{{ name|json_encode }}'
