Some toggler xlates

--- a/templates/_base/layout.html.twig
+++ b/templates/_base/layout.html.twig
@@ -53,7 +53,7 @@
     <header class="admin__header">
         <div class="admin__header--topbar">
             <h1 class="admin__header--title">{{ block('title') }}</h1>
-            <button class="admin-sidebar-toggler btn btn-md"><span class="sr-only">Toggle </span>menu</button>
+            <button class="admin-sidebar-toggler btn btn-md"><span class="sr-only">{{ 'admin_sidebar_toggler.toggle'|trans }}</span></button>
         </div>
     </header>
     <!-- End Admin Header -->
