--- a/templates/_partials/fields/filelist.html.twig
+++ b/templates/_partials/fields/filelist.html.twig
@@ -5,6 +5,6 @@
         <input name="{{ name }}" placeholder="…" type="text" value="{{ file }}" class="form-control {{ class }}" {{ attributes|default()|raw }}>
     {% endfor %}
 
-    <mark>Note: This field is practically the same as the <code>imagelist</code>-field.</mark>
+    <mark>{{ 'filelist.remark'|trans|raw }}</mark>
 
 {% endblock %}
