--- a/templates/_partials/fields/repeater.html.twig
+++ b/templates/_partials/fields/repeater.html.twig
@@ -1,5 +1,5 @@
 {% extends '@bolt/_partials/fields/_base.html.twig' %}
 
 {% block field %}
-    <mark>Note: The Repeater / Block field is basically a wrapper for other fields.</mark>
+    <mark>{{ 'repeater.remark'|trans|raw }}</mark>
 {% endblock %}
