--- a/templates/_partials/_flash_messages.html.twig
+++ b/templates/_partials/_flash_messages.html.twig
@@ -5,7 +5,7 @@
             <!-- Then put toasts within -->
             <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-delay="6000">
                 <div class="alert-{{ type }} toast-header">
-                    <strong class="mr-auto">{{ 'flash_messages.notification'|trans }}Notification </strong>
+                    <strong class="mr-auto">{{ 'flash_messages.notification'|trans }}</strong>
                     <small>{{ type|trans }}</small>
                     <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
