--- a/templates/content/listing.html.twig
+++ b/templates/content/listing.html.twig
@@ -55,10 +55,10 @@
             <form>
                 <div class="form-group">
                     <p>
-                        <strong>Sort by</strong>:
+                        <strong>{{ 'listing.title_sortby'|trans }}</strong>:
                         <select name="sort" class="form-control">
                                 <option value="" disabled {% if sortBy is empty %}selected{% endif %}>
-                                    Select item
+                                    {{ 'listing.option_select_item'|trans }}
                                 </option>
                             {% for key, filterOption in filterOptions %}
                                 <option value="{{ key }}" {% if sortBy == key %}selected{% endif %}>
@@ -68,14 +68,14 @@
                         </select>
                     </p>
                     <p>
-                        <strong>Title</strong>:
-                        <input class="form-control" type="text" name="filter" value="{{ filterValue }}" placeholder="Keyword ..."></input>
+                        <strong>{{ 'listing.title_title'|trans }}</strong>:
+                        <input class="form-control" type="text" name="filter" value="{{ filterValue }}" placeholder="{{ 'listing.placeholder_filter'|trans }}"></input>
                     </p>
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-tertiary" type="submit">Filter</button>
+                    <button class="btn btn-tertiary" type="submit">{{ 'listing.button_filter'|trans }}</button>
                     {% if sortBy is not empty or filterValue is not empty %}
-                        <a class="btn btn-danger" href="{{ path('bolt_content_overview', {'contentType': contentType.slug}) }}"><i class="fa fa-close"></i> Clear sort/filter</a>
+                        <a class="btn btn-danger" href="{{ path('bolt_content_overview', {'contentType': contentType.slug}) }}"><i class="fa fa-close"></i>{{ 'listing.button_clear'|trans }}</a>
                     {% endif %}
                 </div>
             </form>
