--- a/templates/content/listing.html.twig
+++ b/templates/content/listing.html.twig
@@ -69,7 +69,8 @@
                     </p>
                     <p>
                         <strong>{{ 'listing.title_title'|trans }}</strong>:
-                        <input class="form-control" type="text" name="filter" value="{{ filterValue }}" placeholder="{{ 'listing.placeholder_filter'|trans }}"></input>
+                        <input class="form-control" type="text" name="filter" value="{{ filterValue }}"
+                               placeholder="{{ 'listing.placeholder_filter'|trans }}"/>
                     </p>
                 </div>
                 <div class="form-group">
