--- a/templates/finder/_files_cards.html.twig
+++ b/templates/finder/_files_cards.html.twig
@@ -44,7 +44,7 @@
                             aria-expanded="false"
                     >
                         <i class="fas fa-question-circle"></i>
-                        <span class="sr-only">Toggle Dropdown</span>
+                        <span class="sr-only">{{ 'files_cards.button_toggle'|trans }}</span>
                     </button>
 
                     <div class="edit-actions__dropdown dropdown-menu dropdown-menu-right" style="width: 320px;">
@@ -52,54 +52,54 @@
                         <a class="dropdown-item" href="{{ link }}" target="_blank">
                             <i class="fas fa-w fa-edit"></i>
                             {% if extension in imageformats %}
-                                Edit image information
+                                {{ 'files_cards.action_edit_image_info'|trans }}
                             {% else %}
-                                Edit file in editor
+                                {{ 'files_cards.action_edit_file'|trans }}
                             {% endif %}
                         </a>
 
                         <a class="dropdown-item" href="{{ asset(file.filename, 'files') }}" target="_blank">
                             <i class="fas fa-w fa-external-link-square-alt"></i>
-                            View original
+                            {{ 'files_cards.action_view_original'|trans }}
                         </a>
                         <a class="dropdown-item" href="#">
                             <i class="far fa-w fa-copy"></i>
-                            Duplicate {{ file.getRelativePathname|excerpt(22) }}
+                            {{ 'files_cards.action_duplicate'|trans }} {{ file.getRelativePathname|excerpt(22) }}
                         </a>
                         <a class="dropdown-item" href="#" data-confirmation="Are you sure you wish to delete this Content?">
                             <i class="fas fa-w fa-trash"></i>
-                            Delete {{ file.getRelativePathname|excerpt(22) }}
+                            {{ 'files_cards.action_delete'|trans }} {{ file.getRelativePathname|excerpt(22) }}
                         </a>
 
                         <div class="dropdown-divider"></div>
 
                         <span class="dropdown-item-text">
                             <i class="fas fa-link fa-w"></i>
-                            Filename: <code :title="file.fieldValues.slug">{{ file.getRelativePathname }}</code>
+                            {{ 'files_cards.label_filename'|trans }} <code :title="file.fieldValues.slug">{{ file.getRelativePathname }}</code>
                         </span>
 
                         {% if title %}
                             <span class="dropdown-item-text">
                             <i class="fas fa-asterisk fa-w"></i>
-                            Title: {{ title }}
+                            {{ 'files_cards.label_title'|trans }} {{ title }}
                         </span>
                         {% endif %}
 
                         {% if dimensions %}
                             <span class="dropdown-item-text">
                             <i class="fas fa-asterisk fa-w"></i>
-                            Dimensions: {{ dimensions }}
+                            {{ 'files_cards.label_dimensions'|trans }} {{ dimensions }}
                         </span>
                         {% endif %}
 
                         <span class="dropdown-item-text">
                             <i class="fas fa-asterisk fa-w"></i>
-                            Filesize: {{ file.getSize() }}&nbsp;bytes
+                            {{ 'files_cards.label_filesize'|trans }} {{ file.getSize() }}&nbsp;bytes
                         </span>
 
                         <span class="dropdown-item-text">
                             <i class="far fa-calendar-alt fa-w"></i>
-                            Created on: <strong>{{ file.getCTime()|localizeddate('short', 'short', null, 'UTC') }}</strong>
+                            {{ 'files_cards.label_created_on'|trans }} <strong>{{ file.getCTime()|localizeddate('short', 'short', null, 'UTC') }}</strong>
                         </span>
 
                     </div>
