--- a/templates/finder/_files_list.html.twig
+++ b/templates/finder/_files_list.html.twig
@@ -65,7 +65,7 @@
     {% else %}
     <tr>
         <td colspan="6">
-            <p><strong>No files are present in this folder. Select a folder to navigate to, on the right-hand side.</strong></p>
+            <mark><strong>{{ 'files_list.remark'|trans|raw }}</strong></mark>
         </td>
     </tr>
     {% endfor %}
