quickselect xlations added

--- a/templates/finder/_quickselect.html.twig
+++ b/templates/finder/_quickselect.html.twig
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-md-auto align-self-end">
-        <p style="margin-top: 0.75rem">Select a file:</p>
+        <p style="margin-top: 0.75rem">{{ 'quickselect.title_select'|trans }}</p>
     </div>
     <div class="col">
         <div class="selectize-control selectize form-control single" style="min-height: 3rem;">
