finder xlations added

--- a/templates/finder/finder.html.twig
+++ b/templates/finder/finder.html.twig
@@ -27,8 +27,8 @@
 
         View:
         <div class="btn-group">
-            <a href="{{ path('bolt_filemanager', {'location': location, 'path': path, 'view': 'list' }) }}" class="btn btn-secondary"><i class="fas fa-list fa-fw"></i> List</a>
-            <a href="{{ path('bolt_filemanager', {'location': location, 'path': path, 'view': 'cards' }) }}" class="btn btn-secondary ml-1"><i class="fas fa-th fa-fw"></i>Cards</a>
+            <a href="{{ path('bolt_filemanager', {'location': location, 'path': path, 'view': 'list' }) }}" class="btn btn-secondary"><i class="fas fa-list fa-fw"></i>{{ 'finder.button_list'|trans }}</a>
+            <a href="{{ path('bolt_filemanager', {'location': location, 'path': path, 'view': 'cards' }) }}" class="btn btn-secondary ml-1"><i class="fas fa-th fa-fw"></i>{{ 'finder.button_cards'|trans }}</a>
         </div>
     </div>
 </div>
