extensions, dashboard xlations added

--- a/templates/pages/dashboard.html.twig
+++ b/templates/pages/dashboard.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}
   <span class="admin__header--title__prefix">
-      Bolt content management »
+      {{ 'dashboard.title_boltcms'|trans }}
   </span>
   <i class='fas mr-2 fa-tachometer-alt'></i>
   {{ 'caption.dashboard'|trans }}
