login xlations added

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -23,7 +23,7 @@
 
             <div class="card-header">
                 <i class="fa fa-lock" aria-hidden="true"></i>
-                Bolt &raquo; Login
+                {{ 'login.header_login'|trans }}
             </div>
 
             <div class="card-body">
