--- a/templates/_partials/fields/geolocation.html.twig
+++ b/templates/_partials/fields/geolocation.html.twig
@@ -18,25 +18,29 @@
                 <div class="col-8">
                     <div class="form-group">
                         <label>{{ 'geolocation.label_address'|trans }}</label>
-                        <input class="form-control address" name="geolocation[address]" placeholder="{{ 'geolocation.placeholder_address'|trans }}" type="text" value="">
+                        <input class="form-control address" name="geolocation[address]"
+                               placeholder="{{ 'geolocation.placeholder_address'|trans }}" type="text" value="">
                     </div>
                     <div class="row">
                         <div class="form-group">
                             <div class="form-inline">
                                 <div class="col-6">
                                     <label class="justify-content-start">{{ 'geolocation.label_lat'|trans }}</label>
-                                    <input class="form-control" name="geolocation[latitude]" readonly="" step="any" type="number" value="">
+                                    <input class="form-control" name="geolocation[latitude]" readonly="" step="any"
+                                           type="number" value="">
                                 </div>
                                 <div class="col-6">
                                     <label class="justify-content-start">{{ 'geolocation.label_long'|trans }}</label>
-                                    <input class="form-control" name="geolocation[longitude]" readonly="" step="any" type="number" value="">
+                                    <input class="form-control" name="geolocation[longitude]" readonly="" step="any"
+                                           type="number" value="">
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="form-group">
                         <label>{{ 'geolocation.label_address_matched'|trans }}</label>
-                        <input class="form-control" name="geolocation[formatted_address]" placeholder="—" readonly="" type="text" value="">
+                        <input class="form-control" name="geolocation[formatted_address]" placeholder="—" readonly=""
+                               type="text" value="">
                     </div>
                 </div>
                 <div class="col-4">
